--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,156 +3,154 @@ layout: default
 title: Portfolio
 ---
 <div class="wow fadeInUp">
-<div class="box">
-  <div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-xs-12">
-      <h3>Portfolio</h3>
-      <hr class="star-primary">
-    </div>
-    </div>
-    <div class="row row-edit">
-      <!-- PORTFOLIO IMAGE 1 -->
-      <div class="col-md-4 col-edit ">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/uiowabetas.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>UIOWABETAS</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg" data-target="#myModal">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+  <div class="box">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <h3>Portfolio</h3>
+          <hr class="star-primary">
         </div>
-        <!-- /grid-mask -->
       </div>
-      <!-- /col -->
 
+      <div class="row row-edit">
 
-      <!-- MODAL SHOW THE PORTFOLIO IMAGE. In this demo, all links point to this modal. You should create
-                a modal for each of your projects. -->
-
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title">UiowaBetas.com</h4>
-            </div>
-            <div class="modal-body">
-              <p>
-                <img class="img-responsive img-edit" src="{{ "/img/portfolio/uiowabetas.jpg" | prepend: site.baseurl }}" alt="uiowabetas.com">
-              </p>
-              <div class="modalp">This project was crafted for my fraternity at the University of Iowa.
-                <ul>
-                  <li>Site utilizes Bootstrap</li>
-                  <li>Responsive Design</li>
-                  <li>CloudFlare CDN for faster load times</li>
-                  <li>Pictures utilize Couldinary CDN for faster load times of site</li>
-                </ul> Tell about the challenges faced and what you and your team did to solve it.</div>
-              <br>
-              <p><b><a href="http://uiowabetas.com">Visit Site</a></b>
-              </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+        <!-- PORTFOLIO IMAGE 1 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive" src="{{ " /img/portfolio/uiowabetas.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>UIOWABETAS</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
           </div>
-          <!-- /.modal-content -->
+          <!-- /grid-mask -->
         </div>
-        <!-- /.modal-dialog -->
-      </div>
-      <!-- /.modal -->
+        <!-- /col -->
 
-
-      <!-- PORTFOLIO IMAGE 2 -->
-      <div class="col-md-4 col-edit">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio02.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>UI DESIGN</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+        <!-- MODAL SHOW THE PORTFOLIO IMAGE. In this demo, all links point to this modal. You should create
+                a modal for each of your projects. -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">UiowaBetas.com</h4>
+              </div>
+              <div class="modal-body">
+                <p>
+                  <img class="img-responsive img-edit" src="{{ " /img/portfolio/uiowabetas.jpg " | prepend: site.baseurl }}" alt="uiowabetas.com">
+                </p>
+                <div class="modalp">This project was crafted for my fraternity at the University of Iowa.
+                  <ul>
+                    <li>Site utilizes Bootstrap</li>
+                    <li>Responsive Design</li>
+                    <li>CloudFlare CDN for faster load times</li>
+                    <li>Pictures utilize Couldinary CDN for faster load times of site</li>
+                  </ul> Tell about the challenges faced and what you and your team did to solve it.</div>
+                <br>
+                <p><b><a href="http://uiowabetas.com">Visit Site</a></b>
+                </p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+            <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
         </div>
-        <!-- /grid-mask -->
-      </div>
-      <!-- /col -->
+        <!-- /.modal -->
 
-      <!-- PORTFOLIO IMAGE 3 -->
-      <div class="col-md-4 col-edit">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio03.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>ANDROID PAGE</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+        <!-- PORTFOLIO IMAGE 2 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive img-edit" src="{{ " /img/portfolio/folio02.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>UI DESIGN</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
+          </div>
+          <!-- /grid-mask -->
         </div>
-        <!-- /grid-mask -->
-      </div>
-      <!-- /col -->
-    </div>
+        <!-- /col -->
 
-    <!-- PORTFOLIO IMAGE 4 -->
-    <div class="row row-edit">
-      <div class="col-md-4 col-edit">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio04.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>PROFILE</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+        <!-- PORTFOLIO IMAGE 3 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive img-edit" src="{{ " /img/portfolio/folio03.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>ANDROID PAGE</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
+          </div>
+          <!-- /grid-mask -->
         </div>
-        <!-- /grid-mask -->
-      </div>
-      <!-- /col -->
+        <!-- /col -->
 
-      <!-- PORTFOLIO IMAGE 5 -->
-      <div class="col-md-4 col-edit">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio05.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>TWITTER STATUS</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+        <!-- PORTFOLIO IMAGE 4 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive img-edit" src="{{ " /img/portfolio/folio04.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>PROFILE</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
+          </div>
+          <!-- /grid-mask -->
         </div>
-        <!-- /grid-mask -->
-      </div>
-      <!-- /col -->
+        <!-- /col -->
 
-      <!-- PORTFOLIO IMAGE 6 -->
-      <div class="col-md-4 col-edit">
-        <div class="grid mask">
-          <figure>
-            <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio06.jpg" | prepend: site.baseurl }}" alt="">
-            <figcaption>
-              <h5>PHONE MOCKUP</h5>
-              <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
-            </figcaption>
-            <!-- /figcaption -->
-          </figure>
-          <!-- /figure -->
+        <!-- PORTFOLIO IMAGE 5 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive img-edit" src="{{ " /img/portfolio/folio05.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>TWITTER STATUS</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
+          </div>
+          <!-- /grid-mask -->
         </div>
-        <!-- /grid-mask -->
+        <!-- /col -->
+
+        <!-- PORTFOLIO IMAGE 6 -->
+        <div class="col-md-4 col-sm-6">
+          <div class="grid mask">
+            <figure>
+              <img class="img-responsive img-edit" src="{{ " /img/portfolio/folio06.jpg " | prepend: site.baseurl }}" alt="">
+              <figcaption>
+                <h5>PHONE MOCKUP</h5>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Take a Look</a>
+              </figcaption>
+              <!-- /figcaption -->
+            </figure>
+            <!-- /figure -->
+          </div>
+          <!-- /grid-mask -->
+        </div>
+        <!-- /col -->
+
       </div>
-      <!-- /col -->
     </div>
   </div>
-</div>
 </div>
