--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@ title: Portfolio
           <hr class="star-primary">
         </div>
       </div>
-
+      <div class="container-fluid">
       <div class="row row-edit">
 
         <!-- PORTFOLIO IMAGE 1 -->
@@ -151,6 +151,7 @@ title: Portfolio
         <!-- /col -->
 
       </div>
+    </div>
     </div>
   </div>
 </div>
