--- a/resume/index.html
+++ b/resume/index.html
@@ -1,62 +1,66 @@
 ---
 layout: default
-title: Resume
 ---
 
 <div class="wow fadeInUp">
-<div class="box">
-  <div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-xs-12">
-        <h3>Resume</h3>
-        <hr class="star-primary">
+  <div class="box">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <h3>Resume</h3>
+          <hr class="star-primary">
+        </div>
       </div>
-    </div>
 
-        <div class="boxresume">
-          <div class="row">
-            <div class="col-sm-2">
-              <h5 class="text-center">EDUCATION</h5>
-            </div>
-            <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
-              <p>
-                <t>Master of Web Design</t>
-                <br/> St. Patrick University
-                <br/>
-                <i>3 Years Course</i>
-              </p>
-            </div>
-            <div class="col-md-3 col-sm-4">
-              <p>
-                <sm>GRADUATING MAY 2014</sm>
-                <br/>
-                <imp>
-                  <sm>In Progress</sm>
-                </imp>
-              </p>
-            </div>
+      <div class="boxresume">
+        <div class="row">
+          <div class="col-sm-2">
+            <h5 class="text-center">EDUCATION</h5>
           </div>
-          <br>
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
-              <p>
-                <t>Degree of Web Developer</t>
-                <br/> Hastings University
-                <br/>
-                <i>2 Years Course</i>
-              </p>
-            </div>
-            <div class="col-md-3 col-sm-4">
-              <p>
-                <sm>JUNE 2012</sm>
-              </p>
-            </div>
+          <div class="col-md-6 col-md-offset-1 col-sm-5 col-sm-offset-1">
+            <p>
+              <t>Master of Web Design</t>
+              <br/> St. Patrick University
+              <br/>
+              <i>3 Years Course</i>
+            </p>
+          </div>
+          <div class="col-md-3 col-sm-4">
+            <p>
+              <sm>GRADUATING MAY 2014</sm>
+              <br/>
+              <imp>
+                <sm>In Progress</sm>
+              </imp>
+            </p>
           </div>
         </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-sm-5 col-sm-offset-3">
+            <p>
+              <t>Degree of Web Developer</t>
+              <br/> Hastings University
+              <br/>
+              <i>2 Years Course</i>
+            </p>
+          </div>
+          <div class="col-md-3 col-sm-4">
+            <p>
+              <sm>JUNE 2012</sm>
+            </p>
+          </div>
+        </div>
+      </div>
 
+      <div class="boxresume">
+        <div class="row">
+      <hr class="line">
+  </div>
+</div>
 
-    <!--WORK DESCRIPTION -->
-    <div class="boxresume">
+      <!--WORK DESCRIPTION -->
+      <div class="boxresume">
         <div class="row">
           <div class="col-sm-2">
             <h5 class="text-center">WORK</h5>
@@ -99,10 +103,16 @@ title: Resume
             </p>
           </div>
         </div>
-    </div>
+      </div>
 
-    <!--AWARDS DESCRIPTION -->
-    <div class="boxresume">
+      <div class="boxresume">
+        <div class="row">
+      <hr class="line">
+  </div>
+</div>
+
+      <!--AWARDS DESCRIPTION -->
+      <div class="boxresume">
         <div class="row">
           <div class="col-sm-2">
             <h5 class="text-center">AWARDS</h5>
@@ -139,7 +149,7 @@ title: Resume
             </p>
           </div>
         </div>
+      </div>
     </div>
   </div>
-</div>
 </div>
