--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@ title: Portfolio
                 LandrTech
                  <br>
                   <br>
-                  <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio02.jpg" | prepend: site.baseurl }}" alt="">
+                  <img class="img-responsive img-edit" src="{{ "/img/portfolio/landrtech.jpg" | prepend: site.baseurl }}" alt="">
                 </a>
               </h4>
             </div>
@@ -72,10 +72,10 @@ title: Portfolio
             <div class="panel-heading text-center" role="tab" id="headingThree">
               <h4 class="panel-title text-center">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      UIOWABETAS
+                      YOUR WEBSITE
                       <br>
                       <br>
-                      <img class="img-responsive img-edit" src="{{ "/img/portfolio/folio04.jpg" | prepend: site.baseurl }}" alt="">
+                      <img class="img-responsive img-edit" src="{{ "/img/portfolio/placeholder.jpg" | prepend: site.baseurl }}" alt="">
                     </a>
               </h4>
             </div>
